refactor(util): 플레이어 중복 이름 검증 로직 추가